# inference-engine

./: .gitignore  CMakeLists.txt  README.md
examples/: benchmark.cpp  onnx_inference.cpp  simple_inference.cpp
include/inference_engine/core/: common.h  dtype.h  model.h  shape.h  tensor.h
include/inference_engine/graph/: attributes.h  graph.h  node.h  operator.h  value.h
include/inference_engine/memory/: allocator.h  arena.h  buffer.h
src/core/: dtype.cpp  model.cpp  shape.cpp  tensor.cpp
src/graph/: attributes.cpp  graph.cpp  node.cpp  operator.cpp  value.cpp
src/memory/: allocator.cpp  arena.cpp  buffer.cpp
tests/: test_linear.cpp  test_quant.cpp  test_scheduler.cpp  test_tensor.cpp
tests/core/: test_dtype.cpp  test_shape.cpp  test_tensor.cpp
tests/graph/: test_graph.cpp  test_node.cpp
tests/memory/: test_allocator.cpp  test_arena.cpp
tools/: onnx_inspect.cpp
